--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -1,6 +1,12 @@
 Entfernung:
   GA 79:
   - pageref: 2ff.
+Etymologie:
+  GA 79:
+  - pageref: 13-15
+Geviert:
+  GA 79:
+  - pageref: 17ff.
 "Grundri\xDF":
   GA 61:
   - pageref: 159-160
@@ -10,6 +16,3 @@ Entfernung:
     reftype: r
   ZW:
   - pageref: '79'
-Etymologie:
-  GA 79:
-  - pageref: 13-15
