--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -1,18 +1,21 @@
 Entfernung:
-  GA 79:
+  EWI:
   - pageref: 2ff.
 Etymologie:
-  GA 79:
+  EWI:
   - pageref: 13-15
 Geviert:
-  GA 79:
+  EWI:
   - pageref: 17ff.
 "Grundri\xDF":
   GA 61:
   - pageref: 159-160
     reftype: r
-  GA 79:
+  EWI:
   - pageref: 8-9
     reftype: r
   ZW:
   - pageref: '79'
+Tod:
+  EWI:
+  - pageref: '18'
