--- a/references.yml
+++ b/references.yml
@@ -18,7 +18,7 @@ EWI:
   publisher: Vittorio Klostermann
   publisher-place: Frankfurt am Main
   title: "Einblick in das was ist, Bremer Vortr\xE4ge 1949"
-  type: book
+  type: chapter
 SZ:
   author:
   - family: Heidegger
