Added GA 29/30 p. 251-258 lemmas

--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -1,19 +1,74 @@
+'''Sein und Zeit''':
+  GA 29/30:
+  - pageref: '262'
+'''Vom Wesen des Grundes''':
+  GA 29/30:
+  - pageref: '261'
+'''im Ganzen''':
+  GA 29/30:
+  - pageref: '251'
 Aristoteles:
   SZ:
   - pageref: '3'
   reftype: p
+Augenblick:
+  GA 29/30:
+  - pageref: '251'
+  - pageref: '257'
+  - pageref: '257'
+"Bedr\xE4ngnis im Ganzen":
+  GA 29/30:
+  - pageref: '251'
+Befreiung:
+  GA 29/30:
+  - pageref: '253'
+Befreiung des Daseins im Menschen:
+  GA 29/30:
+  - pageref: '255'
+  - pageref: '257'
+    reftype: r
+Blick der Entschlossenheit:
+  GA 29/30:
+  - pageref: '251'
+Dasein:
+  GA 29/30:
+  - pageref: '251'
+Endlichkeit des Daseins:
+  GA 29/30:
+  - pageref: '252'
 Entfernung:
   EWI:
   - pageref: 2ff.
+Entschlossenheit:
+  GA 29/30:
+  - pageref: '251'
+Ernst:
+  GA 29/30:
+  - pageref: '258'
 Etymologie:
   EWI:
   - pageref: 13-15
+Existenz:
+  GA 29/30:
+  - pageref: '257'
+Frage nach dem Sein:
+  GA 29/30:
+  - pageref: '256'
 Frage nach dem Sinn von Sein:
   SZ:
   - pageref: 1-8
+Gebrochenheit des Daseins:
+  GA 29/30:
+  - pageref: '252'
+Geheimnis:
+  GA 29/30:
+  - pageref: '255'
 Geviert:
   EWI:
   - pageref: 17ff.
+Gott:
+  GA 29/30:
+  - pageref: '262'
 "Grundri\xDF":
   EWI:
   - pageref: 8-9
@@ -23,10 +78,24 @@ Geviert:
     reftype: r
   ZW:
   - pageref: '79'
+Grundstimmung:
+  GA 29/30:
+  - pageref: '251'
+  - pageref: '252'
+  - pageref: '253'
+  - pageref: '254'
+  - pageref: '256'
+Haben der Welt:
+  GA 29/30:
+  - pageref: '262'
+  - pageref: '263'
 Hegel, Georg Wilhelm Friedrich:
   SZ:
   - pageref: '3'
   reftype: p
+Horizont:
+  GA 29/30:
+  - pageref: '252'
 "Kierkegaard, S\xF8ren":
   GA 29/30:
   - pageref: '226'
@@ -36,6 +105,9 @@ Langeweile:
   - pageref: '39'
   GA 29/30:
   - pageref: 115ff.
+Leere im Ganzen:
+  GA 29/30:
+  - pageref: '251'
 Maschine:
   EWI:
   - pageref: '35'
@@ -51,13 +123,23 @@ Pascal, Blaise:
   SZ:
   - pageref: '4'
   reftype: p
+Philosophie:
+  GA 29/30:
+  - pageref: '259'
+  - pageref: '260'
 Plato:
   SZ:
   - pageref: '3'
   reftype: p
+"Rand der M\xF6glichkeit":
+  GA 29/30:
+  - pageref: '257'
 "R\xE4tsel":
   SZ:
   - pageref: '4'
+Seiende im Ganzen:
+  GA 29/30:
+  - pageref: '251'
 Sein zu Seiendem als Seidendem:
   SZ:
   - pageref: '4'
@@ -68,9 +150,24 @@ Thomans von Aquin:
 Tod:
   EWI:
   - pageref: '18'
+Vereinzelung:
+  GA 29/30:
+  - pageref: '251'
+  - pageref: 252-253
 Verhalten:
   SZ:
   - pageref: '4'
+Welt:
+  GA 29/30:
+  - pageref: '251'
+  - pageref: 251-253
+  - pageref: '261'
+  - pageref: '262'
+  - pageref: '263'
+  - pageref: '264'
+Zeitlichkeit des Daseins:
+  GA 29/30:
+  - pageref: '253'
 antiken Ontologie:
   SZ:
   - pageref: '4'
@@ -83,6 +180,13 @@ auf der Stelle zur Stelle:
   - pageref: '40'
   VA:
   - pageref: '17'
+tiefen Langeweile:
+  GA 29/30:
+  - pageref: '251'
+  - pageref: '252'
+  - pageref: '253'
+  - pageref: '254'
+  - pageref: '256'
 unbestimmte Unmittelbare:
   SZ:
   - pageref: '3'
