--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -7,6 +7,9 @@
 '''im Ganzen''':
   GA 29/30:
   - pageref: '251'
+Abgrund:
+  VA:
+  - pageref: 269ff.
 Aristoteles:
   SZ:
   - pageref: '3'
@@ -47,6 +50,10 @@ Beziehung zu Seiendem als Solchem:
 Blick der Entschlossenheit:
   GA 29/30:
   - pageref: '251'
+Christus:
+  VA:
+  - pageref: 269
+  reftype: p
 Darwin, Charles:
   GA 29/30:
   - pageref: '366'
@@ -54,6 +61,13 @@ Darwin, Charles:
 Dasein:
   GA 29/30:
   - pageref: '251'
+Dionysos:
+  VA:
+  - pageref: 269
+  reftype: p
+"D\xFCrftiger Zeit":
+  VA:
+  - pageref: 269ff
 Endlichkeit des Daseins:
   GA 29/30:
   - pageref: '252'
@@ -72,6 +86,9 @@ Etymologie:
 Existenz:
   GA 29/30:
   - pageref: '257'
+Fehl Gottes:
+  VA:
+  - pageref: 269
 Frage nach dem Sein:
   GA 29/30:
   - pageref: '256'
@@ -87,6 +104,11 @@ Geheimnis:
 Geviert:
   EWI:
   - pageref: 17ff.
+Glanz:
+  GA 13:
+  - pageref: 88
+  VA:
+  - pageref: 269
 "Gleichg\xFCltigkeit":
   GA 29/30:
   - pageref: '367'
@@ -117,6 +139,10 @@ Haben der Welt:
 Hegel, Georg Wilhelm Friedrich:
   SZ:
   - pageref: '3'
+  reftype: p
+Herakles:
+  VA:
+  - pageref: 269
   reftype: p
 Horizont:
   GA 29/30:
@@ -211,6 +237,12 @@ Welt:
   - pageref: '262'
   - pageref: '263'
   - pageref: '264'
+Weltalter:
+  VA:
+  - pageref: 269ff.
+Weltnacht:
+  VA:
+  - pageref: 269ff.
 Zeitlichkeit des Daseins:
   GA 29/30:
   - pageref: '253'
