--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         command: |
           cd ${{ secrets.SERVER_ROOT_DIR }}
-          export SECRET_KEY=${{ DJANGO_SECRET_KEY }}
+          export SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
           make update
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
