Quotes around secret key

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,8 @@ jobs:
     - name: Update container on server
       uses: garygrossgarten/github-action-ssh@release
       with:
-        command: |
-          cd ${{ secrets.SERVER_ROOT_DIR }}
-          export SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
+        command: cd ${{ secrets.SERVER_ROOT_DIR }};
+          export SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}"
           make update
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
