--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Deploy with rsync
-      run: ls -a; rsync -ravz "${{ github.workspace }}/" ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SERVER_ROOT_DIR }}
+      run: >
+        ls -a; rsync -ravz "${{ github.workspace }}/[!.]*"
+        ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.SERVER_ROOT_DIR }}
     - name: Update container on server
       uses: garygrossgarten/github-action-ssh@release
       with:
