Add work as a new reftype

--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -1,9 +1,11 @@
-'''Sein und Zeit''':
+Sein und Zeit:
   GA 29/30:
   - pageref: '262'
-'''Vom Wesen des Grundes''':
+  reftype: w
+Vom Wesen des Grundes:
   GA 29/30:
   - pageref: '261'
+  reftype: w
 Abgrund:
   VA:
   - pageref: 269ff.
