Das Wesen des Menschen

--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -1,11 +1,3 @@
-Sein und Zeit:
-  GA 29/30:
-  - pageref: '262'
-  reftype: w
-Vom Wesen des Grundes:
-  GA 29/30:
-  - pageref: '261'
-  reftype: w
 Abgrund:
   VA:
   - pageref: 269ff.
@@ -52,13 +44,13 @@ Beziehung zu Seiendem als Solchem:
 Blick der Entschlossenheit:
   GA 29/30:
   - pageref: '251'
-Christus:
-  VA:
-  - pageref: 269
 Buytendijk, Frederik Jacobus Johannes:
   GA 29/30:
   - pageref: 375-376
   reftype: p
+Christus:
+  VA:
+  - pageref: 269
 Darwin, Charles:
   GA 29/30:
   - pageref: '366'
@@ -74,13 +66,13 @@ Dionysos:
   VA:
   - pageref: 269
   reftype: p
-"D\xFCrftiger Zeit":
-  VA:
-  - pageref: 269ff
 Driesch, Hans:
   GA 29/30:
   - pageref: 380-381
   reftype: p
+"D\xFCrftiger Zeit":
+  VA:
+  - pageref: 269ff
 Endlichkeit des Daseins:
   GA 29/30:
   - pageref: '252'
@@ -133,7 +125,7 @@ Gott:
   EWI:
   - pageref: 8-9
     reftype: r
-  GA61:
+  GA 61:
   - pageref: 159-160
     reftype: r
   ZW:
@@ -160,9 +152,6 @@ Herakles:
 Horizont:
   GA 29/30:
   - pageref: '252'
-im Ganzen:
-  GA 29/30:
-  - pageref: '251'
 "Kierkegaard, S\xF8ren":
   GA 29/30:
   - pageref: '226'
@@ -224,6 +213,10 @@ Reizbarkeit:
 Seiende im Ganzen:
   GA 29/30:
   - pageref: '251'
+Sein und Zeit:
+  GA 29/30:
+  - pageref: '262'
+  reftype: w
 Sein zu Seiendem als Seidendem:
   SZ:
   - pageref: '4'
@@ -249,6 +242,10 @@ Vereinzelung:
 Verhalten:
   SZ:
   - pageref: '4'
+Vom Wesen des Grundes:
+  GA 29/30:
+  - pageref: '261'
+  reftype: w
 Welt:
   GA 29/30:
   - pageref: '251'
@@ -278,6 +275,14 @@ auf der Stelle zur Stelle:
   - pageref: '40'
   VA:
   - pageref: '17'
+das Wesen des Menschen:
+  EWI:
+  - pageref: '70'
+  GA 13:
+  - pageref: '38'
+im Ganzen:
+  GA 29/30:
+  - pageref: '251'
 tiefen Langeweile:
   GA 29/30:
   - pageref: '251'
