--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ jobs:
       with:
         command: |
           cd ${{ secrets.SERVER_ROOT_DIR }}
-          echo SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" > .env
-          echo DEBUG=0 >> .env
+          dotenv set SECRET_KEY "${{ secrets.DJANGO_SECRET_KEY }}"
+          dotenv set DEBUG 0
           make update
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
