Some references in "Wozu Dichter?"

--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -1,6 +1,8 @@
 Abgrund:
   VA:
   - pageref: 269ff.
+  WD:
+  - pageref: 248f.
 Aristoteles:
   SZ:
   - pageref: '3'
@@ -109,6 +111,9 @@ Geheimnis:
 Gelassenheit:
   GA 13:
   - pageref: 40ff.
+Geschick:
+  WD:
+  - pageref: '272'
 Geviert:
   EWI:
   - pageref: 17ff.
@@ -155,6 +160,10 @@ Herakles:
 Horizont:
   GA 29/30:
   - pageref: '252'
+"H\xF6lderlin":
+  WD:
+  - pageref: 248ff.
+    reftype: w
 "Kierkegaard, S\xF8ren":
   GA 29/30:
   - pageref: '226'
@@ -170,6 +179,9 @@ Leere:
 Leere im Ganzen:
   GA 29/30:
   - pageref: '251'
+Lichtung:
+  WD:
+  - pageref: '273'
 Maschine:
   EWI:
   - pageref: '35'
@@ -227,10 +239,16 @@ Sein und Zeit:
 Sein zu Seiendem als Seidendem:
   SZ:
   - pageref: '4'
+Seinsvergessenheit:
+  WD:
+  - pageref: '273'
 Spemann, Hans:
   GA 29/30:
   - pageref: '381'
   reftype: p
+Spur:
+  WD:
+  - pageref: '272'
 Thomans von Aquin:
   SZ:
   - pageref: '3'
@@ -282,11 +300,20 @@ auf der Stelle zur Stelle:
   - pageref: '40'
   VA:
   - pageref: '17'
+das Heilige:
+  WD:
+  - pageref: '272'
+das Ungesprochene:
+  WD:
+  - pageref: '273'
 das Wesen des Menschen:
   EWI:
   - pageref: '70'
   GA 13:
   - pageref: '38'
+"d\xFCrftiger Zeit":
+  WD:
+  - pageref: 248ff.
 im Ganzen:
   GA 29/30:
   - pageref: '251'
