--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -14,7 +14,7 @@ Baer, Karl Ernst von:
   GA 29/30:
   - begin: 378
   reftype: p
-"Bedr\xE4ngnis im Ganzen":
+Bedrängnis im Ganzen:
   GA 29/30:
   - begin: 251
 Befreiung:
@@ -74,7 +74,7 @@ Driesch, Hans:
   - begin: 380
     end: 381
   reftype: p
-"D\xFCrftiger Zeit":
+Dürftiger Zeit:
   WD:
   - begin: 269
     suffix: ff
@@ -130,14 +130,14 @@ Glanz:
   - begin: 88
   WD:
   - begin: 269
-"Gleichg\xFCltigkeit":
+Gleichgültigkeit:
   GA 29/30:
   - begin: 367
     reftype: r
 Gott:
   GA 29/30:
   - begin: 262
-"Grundri\xDF":
+Grundriß:
   EWI:
   - begin: 8
     end: 9
@@ -170,12 +170,12 @@ Herakles:
 Horizont:
   GA 29/30:
   - begin: 252
-"H\xF6lderlin, Friedrich":
+Hölderlin, Friedrich:
   WD:
   - begin: 269
     suffix: ff
   reftype: p
-"Kierkegaard, S\xF8ren":
+Kierkegaard, Søren:
   GA 29/30:
   - begin: 226
   reftype: p
@@ -200,7 +200,7 @@ Maschine:
 Mythos:
   WD:
   - begin: 273
-"M\xFCller, Johannes":
+Müller, Johannes:
   GA 29/30:
   - begin: 372
   reftype: p
@@ -231,7 +231,7 @@ Plato:
   SZ:
   - begin: 3
   reftype: p
-"Rand der M\xF6glichkeit":
+Rand der Möglichkeit:
   GA 29/30:
   - begin: 257
 Reizbarkeit:
@@ -243,11 +243,11 @@ Rilke, Reiner Maria:
   - begin: 274
     suffix: ff
   reftype: p
-"R\xE1dl, Emanuel":
+Rádl, Emanuel:
   GA 29/30:
   - begin: 365
   reftype: p
-"R\xE4tsel":
+Rätsel:
   SZ:
   - begin: 4
 Seiende im Ganzen:
